--- a/circefast/Makefile
+++ b/circefast/Makefile
@@ -3,8 +3,8 @@ CC=gcc
 CFITSIO=/home/ydallilar/software/circefast/cfitsio
 INCDIR=$(CFITSIO)/include
 LIBDIR=$(CFITSIO)/lib
-OPTS=-Wall -Wl,-rpath,$(CFITSIO)/lib -funroll-loops
-LIBS=-lcfitsio -lm -lgsl -lgslcblas -lfftw3 -fopenmp -O3
+OPTS=-Wall -Wl,-rpath,$(CFITSIO)/lib #-funroll-loops
+LIBS=-lcfitsio -lm -lgsl -lgslcblas -lfftw3 -O3 -fopenmp
 
 DEPS=fileio.h engine.h
 OBJ=fileio.o engine.o main.o 
@@ -12,10 +12,13 @@ OBJ=fileio.o engine.o main.o
 CFLAGS=$(LIBS) $(OPTS) -I$(INCDIR) -L$(LIBDIR) 
 
 %.o: %.c $(DEPS)
-	$(CC) -c -o $@ $< $(CFLAGS)
+	$(CC) -c -o $@ $< $(CFLAGS) -fPIC 
 
 prog: $(OBJ)
 	gcc -o main $(OBJ) $(CFLAGS)
 
+shared: $(OBJ)
+	gcc --shared -lgomp  -o circefast.so $(OBJ) $(CFLAGS)
+
 clean: 
-	rm -vf $(OBJ) main
+	rm -vf $(OBJ) main circefast.so
