fix fftcorr, full ramp reads

--- a/circefast/Makefile
+++ b/circefast/Makefile
@@ -3,8 +3,8 @@ CC=gcc
 CFITSIO=/scratch1/ydallilar/circefast/cfitsio
 INCDIR=$(CFITSIO)/include
 LIBDIR=$(CFITSIO)/lib
-OPTS=-Wall -Wl,-rpath,$(CFITSIO)/lib -funroll-loops
-LIBS=-lcfitsio -lm -lgsl -lgslcblas -lfftw3 -O3 -fopenmp
+OPTS=-Wall -Wl,-rpath,$(CFITSIO)/lib #-funroll-loops
+LIBS=-lcfitsio -lm -lgsl -lgslcblas -lfftw3 -O2 -fopenmp
 
 DEPS=fileio.h engine.h
 OBJ=fileio.o engine.o main.o 
